[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/ui/play_again_button/play_again1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/ui/back_to_menu_button/back_to_menu2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ui/back_to_menu_button/back_to_menu1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ui/play_again_button/play_again2.png" type="Texture" id=4]
[ext_resource path="res://Fonts/heartbit2x.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/End.gd" type="Script" id=6]

[node name="End" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = -120.0
margin_right = 166.0
margin_bottom = -80.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenu" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -274.0
margin_top = -120.0
margin_right = -178.0
margin_bottom = -80.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -179.5
margin_right = 179.5
margin_bottom = 388.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grade" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 359.0
margin_bottom = 52.0

[node name="GradeLabel" type="Label" parent="VBoxContainer/Grade"]
margin_right = 128.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "grade:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GradeNumber" type="Label" parent="VBoxContainer/Grade"]
margin_left = 132.0
margin_right = 132.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 359.0
margin_bottom = 108.0

[node name="ScoreLabel" type="Label" parent="VBoxContainer/Score"]
margin_right = 232.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "final score:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumber" type="Label" parent="VBoxContainer/Score"]
margin_left = 236.0
margin_right = 236.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combo" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 359.0
margin_bottom = 164.0

[node name="ComboLabel" type="Label" parent="VBoxContainer/Combo"]
margin_right = 252.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "max combo:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboNumber" type="Label" parent="VBoxContainer/Combo"]
margin_left = 256.0
margin_right = 256.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Great" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 359.0
margin_bottom = 220.0

[node name="GreatLabel" type="Label" parent="VBoxContainer/Great"]
margin_right = 120.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "great:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreatNumber" type="Label" parent="VBoxContainer/Great"]
margin_left = 124.0
margin_right = 124.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Good" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 224.0
margin_right = 359.0
margin_bottom = 276.0

[node name="GoodLabel" type="Label" parent="VBoxContainer/Good"]
margin_right = 108.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "good:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoodNumber" type="Label" parent="VBoxContainer/Good"]
margin_left = 112.0
margin_right = 112.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Okay" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 359.0
margin_bottom = 332.0

[node name="OkayLabel" type="Label" parent="VBoxContainer/Okay"]
margin_right = 108.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "okay:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkayNumber" type="Label" parent="VBoxContainer/Okay"]
margin_left = 112.0
margin_right = 112.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missed" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 336.0
margin_right = 359.0
margin_bottom = 388.0

[node name="MissedLabel" type="Label" parent="VBoxContainer/Missed"]
margin_right = 152.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "missed:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissedNumber" type="Label" parent="VBoxContainer/Missed"]
margin_left = 156.0
margin_right = 156.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="BackToMenu" to="." method="_on_BackToMenu_pressed"]
